--- a/index.html
+++ b/index.html
@@ -410,31 +410,33 @@
     </main>
 
 <!-- footer section -->
-    <footer class="bg-[#121212] py-16">
-      <div class="footer-header flex justify-center items-center gap-2">
-        <img src="/images/logo.png" alt="">
-        <h1 class="font-bold text-2xl text-white">Fruit Burst</h1>
-      </div>
-      <div class="footer-nav flex justify-center pt-10">
-        <ul class="flex justif-center gap-8 text-white tex-base font-light">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">All Fruits</a></li>
-          <li><a href="#">Supports</a></li>
-          <li><a href="#">My Account</a></li>
-        </ul>
-
-      </div>
-      <div class="footer-icon text-center mt-12">
-        <ul class="flex justify-center gap-5">
-          <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-          <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-facebook bg-blue-700 rounded-full"></i></a></li>
-          <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-          <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-          <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-          <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-apple"></i></a></li>
-        </ul>
+    <footer class="bg-[#121212] py-16 w-full mx-auto">
+      <div class="footer-container lg:main-container">
+        <div class="footer-header flex justify-center items-center gap-2">
+          <img src="/images/logo.png" alt="">
+          <h1 class="font-bold text-2xl text-white">Fruit Burst</h1>
+        </div>
+        <div class="footer-nav flex justify-center pt-10">
+          <ul class="flex justif-center gap-8 text-white tex-base font-light">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">All Fruits</a></li>
+            <li><a href="#">Supports</a></li>
+            <li><a href="#">My Account</a></li>
+          </ul>
+  
+        </div>
+        <div class="footer-icon text-center mt-12">
+          <ul class="flex justify-center gap-5">
+            <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-facebook bg-blue-700 rounded-full"></i></a></li>
+            <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+            <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li class="text-white text-3xl"><a href="#"><i class="fa-brands fa-apple"></i></a></li>
+          </ul>
+        </div>
       </div>
 
     </footer>
